[gd_scene load_steps=5 format=3 uid="uid://test_animation"]

[ext_resource type="PackedScene" uid="uid://cplayer" path="res://scenes/player.tscn" id="1_player"]
[ext_resource type="Script" path="res://scripts/test_animation.gd" id="2_script"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(20, 0.1, 20)

[sub_resource type="BoxShape3D" id="BoxShape_1"]
size = Vector3(20, 0.1, 20)

[node name="TestAnimation" type="Node3D"]
script = ExtResource("2_script")

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
collision_layer = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("BoxMesh_1")
gi_mode = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true
shadow_bias = 0.05
shadow_normal_bias = 2.0
directional_shadow_max_distance = 100.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 3.5, 2)
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 400.0

[node name="Label" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "武器タイプ切替"

[node name="BtnNone" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "NONE (素手)"

[node name="BtnRifle" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "RIFLE (ライフル)"

[node name="BtnPistol" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "PISTOL (ピストル)"

[node name="Separator" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "武器装備"

[node name="BtnAK47" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "AK-47"

[node name="BtnRemoveWeapon" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "武器なし"

[node name="Separator4" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "移動テスト"

[node name="BtnWalk" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "歩く"

[node name="BtnRun" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "走る"

[node name="BtnStop" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "停止"

[node name="BtnDying" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "死亡"

[node name="BtnPause" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "一時停止"

[node name="Separator2" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "キャラクター切替"

[node name="BtnGsg9" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "GSG9 (CT)"

[node name="BtnLeet" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "LEET (T)"

[node name="Separator3" type="HSeparator" parent="UI/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
text = "状態: ---"

[connection signal="pressed" from="UI/VBoxContainer/BtnAK47" to="." method="_on_btn_ak47_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnRemoveWeapon" to="." method="_on_btn_remove_weapon_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnNone" to="." method="_on_btn_none_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnRifle" to="." method="_on_btn_rifle_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnPistol" to="." method="_on_btn_pistol_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnWalk" to="." method="_on_btn_walk_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnRun" to="." method="_on_btn_run_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnStop" to="." method="_on_btn_stop_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnDying" to="." method="_on_btn_dying_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnPause" to="." method="_on_btn_pause_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnGsg9" to="." method="_on_btn_gsg9_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/BtnLeet" to="." method="_on_btn_leet_pressed"]
